# DataScience

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytests-on-PRs.yml
DDSA_proposals/: proposals.md
Task1/poetry_project/: pyproject.toml
Task1/poetry_project/tests/: test_poetry_project.py
Task2/: poetryVpipenv.md
Task3/: Dockerfile  README_Pytests_on_PRs.md  tutorial.md
Task3/tests/: test_example_square.py
Task4/zenml-project/: .gitignore  README.md  pyproject.toml
Task4/zenml-project/zenml_project/: gettingstarted.py
Task4/zenml-project/zenml_project/.zen/artifact_stores/: local_artifact_store.yaml
Task4/zenml-project/zenml_project/.zen/metadata_stores/: local_metadata_store.yaml
Task4/zenml-project/zenml_project/.zen/orchestrators/: local_orchestrator.yaml
Task5/: README.md  tutorial.md
Task5/computas-package/: pyproject.toml
Task5/fantastic-project/: pyproject.toml
Task5/test-computas/: pyproject.toml
Task5/test-fantastic/: pyproject.toml
Task6/Task6_old/: requirements.txt
Task6/helloworld/: Dockerfile  README.md  pyproject.toml
Task6/helloworld/tests/: test_helloworld.py
Task7/: .gitignore  README.md
Task7/vertex-ai-qwikstart/: lab_exercise.ipynb  requirements.txt  requirements2.txt
Task7/vertex-ai-qwikstart/local-training/: checkpoints.data-00000-of-00001  checkpoints.index
Task7/vertex-ai-qwikstart/local-training/tensorboard/train/: events.out.tfevents.1649336379.C02YD4BCJGH6.26153.174.v2  events.out.tfevents.1649336380.C02YD4BCJGH6.profile-empty
Task7/vertex-ai-qwikstart/local-training/tensorboard/train/plugins/profile/2022_04_07_14_59_40/: C02YD4BCJGH6.input_pipeline.pb  C02YD4BCJGH6.overview_page.pb  C02YD4BCJGH6.tensorflow_stats.pb  C02YD4BCJGH6.xplane.pb
Task7/vertex-ai-qwikstart/local-training/tensorboard/validation/: events.out.tfevents.1649336380.C02YD4BCJGH6.26153.1584.v2
Task7/vertex-ai-qwikstart/online-retail-clv-3M/: Dockerfile  cloudbuild.yaml  requirements.txt
Task7/vertex-ai-qwikstart/online-retail-clv-3M/trainer/: model.py  task.py
Task7/vertex-ai-qwikstart/utils/: data_download.py  dataset_clean.py  dataset_ml.py  dataset_schema.py
Task8/: README.md
Task8/zenml_project/: README.md  pyproject.toml
Task8/zenml_project/tests/: test_zenml_project.py
Task8/zenml_project/zenml_project/: pipeline.py  run.py
Task9/: BentoML_and_alternatives.md
