[tool.poetry]
name = "poetry_project"
version = "0.1.0"
description = ""
authors = ["Lukas Rasocha <rasocha.lukas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
