[tool.poetry]
name = "zenml-project"
version = "0.1.0"
description = ""
authors = ["Lukas Rasocha <rasocha.lukas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
zenml = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
