[tool.poetry]
name = "fantastic-project"
version = "0.1.0"
description = ""
authors = ["Lukas Rasocha <rasocha.lukas@gmail.com>"]
readme = "README.md"
packages = [{include = "fantastic_project"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
