[tool.poetry]
name = "zenml_project"
version = "0.1.0"
description = ""
authors = ["Lukas Rasocha <rasocha.lukas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
zenml = "^0.7.2"
pandas-gbq = "^0.17.4"
pandas = "1.1.5"
tqdm = "^4.64.0"
numpy = "1.21.4"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
